# study-helper

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: auto-cycle-fix-plan.md  gemini-api-key.md  quickstart.md  telegram-setup.md
scripts/: migrate_drive_root_downloads.py  reconcile_progress.py  recover_missing.py
src/: config.py  crypto.py  logger.py  main.py  updater.py
src/api/: server.py
src/api/routes/: config.py  download.py  health.py  notify.py
src/auth/: login.py
src/converter/: audio_converter.py
src/downloader/: paths.py  result.py  video_downloader.py
src/notifier/: deadline_checker.py  telegram_notifier.py
src/player/: background_player.py  fake_video.py
src/scraper/: course_scraper.py  models.py
src/service/: download_pipeline.py  download_state.py  progress_store.py  recover_pipeline.py  scheduler.py
src/stt/: transcriber.py
src/summarizer/: summarizer.py
src/ui/: auto.py  courses.py  download.py  login.py  player.py  settings.py
src/util/: atomic_write.py  url.py
tests/: conftest.py  test_atomic_write.py  test_auto_progress.py  test_config.py  test_converter.py  test_crypto.py  test_download_state.py  test_logger_filter.py  test_logger_retention.py  test_models.py  test_paths.py  test_summarizer.py  test_transcriber.py  test_video_downloader.py
